cc_library(
  name = "native",
  hdrs = ["native.h"],
  srcs = ["native.h", "native.cc"],
  visibility = ["//visibility:public"],
  deps = [
          #"//bazel-bin/mediapipe/calculators/core:pass_through_calculator",
          #"//bazel-bin/mediapipe/framework:calculator_framework",
          #"//bazel-bin/mediapipe/framework/port:parse_text_proto",
      ],
)
